yarte/tests/proc-fails/proc-basic.stderr
error: proc macro panicked
 --> $DIR/proc-basic.rs:4:13
  |
4 |     let _ = auto!(ywrite_html!(String, "{{ @foo }}"));
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = help: message: error
           --> $DIR/__Main__.hbs:1:5
            |
          1 | {{ @foo }}
            |     ^^^ Not exist @ helper
            |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
